<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".ui.login.ErxesActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f5f5f5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/info_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_bar_height_small"
                    android:background="@drawable/pattern_repeat"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/names"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/contact"
                        android:textColor="#fff"
                        android:textSize="@dimen/header_big"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="@dimen/action_size"
                            android:layout_height="@dimen/action_size"
                            android:src="@drawable/erxes_cancel" />
                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:text="@string/contact_info"
                android:textColor="#686666"
                android:textSize="@dimen/chooser_font_size"
                app:layout_constraintTop_toBottomOf="@+id/info_header" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/toolbarshadow"
                app:layout_constraintTop_toBottomOf="@+id/info_header" />

            <RelativeLayout
                android:id="@+id/selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/fab_margin"
                android:background="@drawable/selector"
                app:layout_constraintTop_toBottomOf="@+id/information">

                <View
                    android:id="@+id/strut"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/smsgroup"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/chooser_height"
                    android:layout_alignLeft="@id/strut"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/chooser_offset"
                    android:onClick="sms_click"
                    android:shape="ring"
                    app:cardCornerRadius="@dimen/chooser_raduis">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/phonezurag"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginRight="14dp"
                            android:src="@drawable/phone_call" />

                        <TextView
                            android:id="@+id/sms_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/sms"
                            android:textColor="#000"
                            android:textSize="@dimen/chooser_font_size" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/mailgroup"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/chooser_height"
                    android:layout_alignRight="@id/strut"
                    android:layout_alignParentLeft="true"
                    android:onClick="email_click"
                    android:shape="ring"
                    app:cardBackgroundColor="#5629B6"
                    app:cardCornerRadius="@dimen/chooser_raduis">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/mail_zurag"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginRight="14dp"
                            android:src="@drawable/ic_mail_outline_black_24dp" />

                        <TextView
                            android:id="@+id/email_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="#fff"
                            android:textSize="@dimen/chooser_font_size" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintTop_toBottomOf="@id/selector">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reply_height"
                    android:background="#fff"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="9"
                        android:background="#fff"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="9"
                        android:hint="@string/sms"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/loginclick"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:onClick="Connect_click"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/send" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <include layout="@layout/loader_view"/>
    </FrameLayout>

</LinearLayout>